--- a/platform/index.html
+++ b/platform/index.html
@@ -80,7 +80,7 @@
                                             <li>
                                                 <a href="#how_it_works" data-tab="tab-2"
                                                    class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools public web site and big screen</a>
+                                                    Schools public website and big screen</a>
                                             </li>
                                             <li>
                                                 <a href="#how_it_works" data-tab="tab-3"
@@ -95,12 +95,12 @@
                                             <li>
                                                 <a href="#how_it_works" data-tab="tab-5"
                                                    class="smooth_scroll main-menu-dropdown-item">
-                                                    Tournaments and events web site</a>
+                                                    Tournaments and events website</a>
                                             </li>
                                             <li>
                                                 <a href="#how_it_works" data-tab="tab-6"
                                                    class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools sports partnerships web site</a>
+                                                    Schools sports partnerships website</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -362,11 +362,11 @@
 
                 <ul class="vertical_tabs">
                     <li class="tab-link current" id="v-tab-1" data-tab="tab-1">Schools and PE teachers web app</li>
-                    <li class="tab-link" id="v-tab-2" data-tab="tab-2">Schools public web site and big screen</li>
+                    <li class="tab-link" id="v-tab-2" data-tab="tab-2">Schools public website and big screen</li>
                     <li class="tab-link" id="v-tab-3" data-tab="tab-3">Schools PE staff mobile app</li>
                     <li class="tab-link" id="v-tab-4" data-tab="tab-4">Parents and students mobile app</li>
-                    <li class="tab-link" id="v-tab-5" data-tab="tab-5">Tournaments and events web site</li>
-                    <li class="tab-link" id="v-tab-6" data-tab="tab-6">Schools sports partnerships web site</li>
+                    <li class="tab-link" id="v-tab-5" data-tab="tab-5">Tournaments and events website</li>
+                    <li class="tab-link" id="v-tab-6" data-tab="tab-6">Schools sports partnerships website</li>
                 </ul>
             </div>
 
@@ -391,7 +391,7 @@
                     </div>
                     <div id="tab-2" class="vertical_tab-content">
                         <div class="text">
-                            <h6>Schools public web site and big screen</h6>
+                            <h6>Schools public website and big screen</h6>
                             <p>
                                 • Modern design, including a photo gallery on the landing page<br>
                                 • Highlighted events in the focus<br>
@@ -441,7 +441,7 @@
                         <div class="text">
                             <h6>Tournaments and events website</h6>
                             <p>
-                                • Well designed groups results and finals pages<br>
+                                • Well designed group results and finals pages<br>
                                 • Game results presented automatically once submitted<br>
                                 • Dedicated website for each event hosted on Squad In Touch servers for free<br>
                                 • Detailed results for each school which participated<br>
