--- a/sport/index.html
+++ b/sport/index.html
@@ -865,17 +865,19 @@
 <section id="testimonials1" class="testimonial_section visible-xs">
     <div class="container">
         <div class="row">
+            <div class="testimonial-mobile-title">
             <div class="col-md-12 testimonial-bottom">
                 <h3>Testimonials</h3>
             </div>
             <div class="slide-button-testimonials">
                 <div class="container slide-button-container">
                     <div class="slide-control-height">
-                        <a class="carousel-control slide-control" href="#carousel-testimonials" data-slide="next">
+                        <a class="carousel-control slide-control" href="#carousel-testimonials1" data-slide="next">
                             <span class="glyphicon slide-content"></span>
                         </a>
                     </div>
                 </div>
+            </div>
             </div>
             <!-- Карусель -->
             <div id="carousel-testimonials1" class="carousel slide" data-interval="0" data-ride="carousel">
@@ -883,17 +885,54 @@
                 <div class="carousel-inner">
                     <!-- Слайды создаются с помощью контейнера с классом item, внутри которого помещается содержимое слайда -->
                     <div class="active item">
+                        <div class="testimonial-mobile">
+                            <div class="testimonial2-school-section">
+                                <img class="testimonial-school" src="../src/image/WE_blazon.png"
+                                     alt="William Edwards"/>
+                            </div>
+                            <div class="testimonial-background">
+                                <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
+                                    <button type="button" class="play-button"
+                                            aria-hidden="true">
+                                    </button>
 
-                        <div class="testimonial2-school-section">
-                            <img class="testimonial-school" src="../src/image/sirjohn.jpg" alt="reily"/>
+                                </a></div>
                         </div>
-                        <div class="testimonial-background">
-                            <a class="play-button-href" href="#videoyoutube" data-toggle="modal">
-                                <button type="button" class="play-button"
-                                        aria-hidden="true">
-                                </button>
+                        <div class="testimonials-title">
+                            <h4>William Edwards School</h4></div>
+                        <div class="testimonials-subj">“Brendan gave an inspirational assembly to students in Years 7 and 8
+                            during
+                            which he gave invaluable advice about how to set goals,
+                            dream big and work hard, even in the face of adversity.
+                            Brendan then spent time working with them on a variety of different
+                            physical
+                            activities throughout the day.”
+                            <br/>
+                            <br>— Matt Bowden, PE Teacher
+                        </div>
 
-                            </a></div>
+
+                    </div>
+
+                    <div class="item">
+                        <div class="testimonial-mobile">
+                            <div class="testimonial2-school-section">
+                                <img class="testimonial-school" src="../src/image/WH_blazon.png"
+                                     alt="William Edwards"/>
+                            </div>
+                            <div class="testimonial3-background"></div>
+                        </div>
+                        <div class="testimonials-title">
+                            <h4>Woodhey High School</h4></div>
+                        <div class="testimonials-subj">"Brendan delivered a personal engaging motivational and humorous speech to our
+                            GCSE pupils. He reinforced the school values of resilience and pushing yourself
+                            to be the best version of you. The pupils enjoyed the activities that were delivered
+                            and the serious element of his message was well received."
+                            <!--<span><a-->
+                            <!--href="#altonschoolmodal" data-toggle="modal"> Read more</a></span>-->
+                            <br/>
+                            <br>— Olivia Williams, PE Teacher.
+                        </div>
 
 
                     </div>
