--- a/platform/index.html
+++ b/platform/index.html
@@ -45,74 +45,80 @@
                                 </a>
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
-                                <ul class="nav navbar-nav">
+                                <div class="main-menu-overlay">
+                                    <ul class="nav navbar-nav main_nav">
 
-                                    <li class="main-menu-item">
-                                        <a href="#" data-toggle="dropdown">
-                                            <b class="caret caret_custom"></b>
-                                            How it helps
-                                        </a>
+                                        <li class="main-menu-item">
+                                            <a href="#" data-toggle="dropdown">
+                                                <b class="caret caret_custom"></b>
+                                                How it helps
+                                            </a>
 
-                                        <ul id="helps_for" class="dropdown-menu main-menu-dropdown">
-                                            <li><a href="#how_it_helps" data-tab="teachers" data-type="helps"
-                                                   class="smooth_scroll main-menu-dropdown-item">PE Teachers</a></li>
-                                            <li><a href="#how_it_helps" data-tab="schools" data-type="helps"
-                                                   class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
-                                            <li><a href="#how_it_helps" data-tab="parents" data-type="helps"
-                                                   class="smooth_scroll main-menu-dropdown-item">Parents</a></li>
-                                            <li><a href="#how_it_helps" data-tab="students" data-type="helps"
-                                                   class="smooth_scroll main-menu-dropdown-item">Students</a></li>
-                                        </ul>
-                                    </li>
+                                            <ul id="helps_for" class="dropdown-menu main-menu-dropdown">
+                                                <li><a href="#how_it_helps" data-tab="teachers" data-type="helps"
+                                                       class="smooth_scroll main-menu-dropdown-item">PE Teachers</a>
+                                                </li>
+                                                <li><a href="#how_it_helps" data-tab="schools" data-type="helps"
+                                                       class="smooth_scroll main-menu-dropdown-item">Schools</a></li>
+                                                <li><a href="#how_it_helps" data-tab="parents" data-type="helps"
+                                                       class="smooth_scroll main-menu-dropdown-item">Parents</a></li>
+                                                <li><a href="#how_it_helps" data-tab="students" data-type="helps"
+                                                       class="smooth_scroll main-menu-dropdown-item">Students</a></li>
+                                            </ul>
+                                        </li>
 
-                                    <li class="main-menu-item">
-                                        <a href="#" data-toggle="dropdown">
-                                            <b class="caret caret_custom"></b>
-                                            How it works
-                                        </a>
+                                        <li class="main-menu-item">
+                                            <a href="#" data-toggle="dropdown">
+                                                <b class="caret caret_custom"></b>
+                                                How it works
+                                            </a>
 
-                                        <ul class="dropdown-menu main-menu-dropdown">
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-1"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools and PE teachers web app</a>
-                                            </li>
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-2"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools public website and big screen</a>
-                                            </li>
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-3"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools PE staff mobile app</a>
-                                            </li>
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-4"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Parents and students mobile app</a>
-                                            </li>
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-5"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Tournaments and events website</a>
-                                            </li>
-                                            <li>
-                                                <a href="#how_it_works" data-tab="tab-6"
-                                                   class="smooth_scroll main-menu-dropdown-item">
-                                                    Schools sports partnerships website</a>
-                                            </li>
-                                        </ul>
-                                    </li>
+                                            <ul class="dropdown-menu main-menu-dropdown">
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-1"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Schools and PE teachers web app</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-2"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Schools public website and big screen</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-3"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Schools PE staff mobile app</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-4"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Parents and students mobile app</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-5"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Tournaments and events website</a>
+                                                </li>
+                                                <li>
+                                                    <a href="#how_it_works" data-tab="tab-6"
+                                                       class="smooth_scroll main-menu-dropdown-item">
+                                                        Schools sports partnerships website</a>
+                                                </li>
+                                            </ul>
+                                        </li>
 
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
-                                    </li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active"><a href="https://app.squadintouch.com"
-                                                                         target="_blank">Sign up /
-                                        Sign in</a>
-                                    </li>
-                                </ul>
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#testimonials">Testimonials</a>
+                                        </li>
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a>
+                                        </li>
+                                        <li class="main-menu-item active"><a href="https://app.squadintouch.com"
+                                                                             target="_blank">Sign up /
+                                            Sign in</a>
+                                        </li>
+                                        <li class="main-menu-item close_menu"><a>Close</a>
+                                        </li>
+                                    </ul>
+                                </div>
                             </div>
                         </nav>
                     </div>
