--- a/sport/index.html
+++ b/sport/index.html
@@ -1119,7 +1119,7 @@
                                               required></textarea>
                                 </div>
                             </div>
-                            <div class="form-group modal-hod">
+                            <div class="form-group modal-hod modal-hod-button">
                                 <button type="submit" id="form-submit"
                                         class="button--primary send-button"
                                         onclick="eventEnquiry()">
