--- a/sport/index.html
+++ b/sport/index.html
@@ -41,23 +41,28 @@
                                 </a>
                             </div>
                             <div class="collapse main-menu" id="navbar-main">
-                                <div class="main-menu-overlay"></div>
-                                <ul class="nav navbar-nav">
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
-                                        works</a></li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a></li>
-                                    <li class="main-menu-item"><a class="smooth_scroll"
-                                                                  href="#testimonials">Testimonials</a>
-                                    </li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#software">Platform</a>
-                                    </li>
-                                    <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a></li>
-                                    <li class="main-menu-item active">
-                                        <a href="#myModal"
-                                           class="collapse"
-                                           data-toggle="modal">Event Enquiry</a>
-                                    </li>
-                                </ul>
+                                <div class="main-menu-overlay">
+                                    <ul class="nav navbar-nav main_nav">
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#howitworks">How it
+                                            works</a></li>
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#speakers">Team</a>
+                                        </li>
+                                        <li class="main-menu-item"><a class="smooth_scroll"
+                                                                      href="#testimonials">Testimonials</a>
+                                        </li>
+                                        <li class="main-menu-item"><a class="smooth_scroll"
+                                                                      href="#software">Platform</a>
+                                        </li>
+                                        <li class="main-menu-item"><a class="smooth_scroll" href="#contact">Contact</a>
+                                        </li>
+                                        <li class="main-menu-item active">
+                                            <a href="#myModal"
+                                               class="collapse"
+                                               data-toggle="modal">Event Enquiry</a>
+                                        </li>
+                                        <li class="main-menu-item close_menu"><a>Close</a>
+                                    </ul>
+                                </div>
                             </div>
                         </nav>
                     </div>
@@ -866,18 +871,18 @@
     <div class="container">
         <div class="row">
             <div class="testimonial-mobile-title">
-            <div class="col-md-12 testimonial-bottom">
-                <h3>Testimonials</h3>
-            </div>
-            <div class="slide-button-testimonials">
-                <div class="container slide-button-container">
-                    <div class="slide-control-height">
-                        <a class="carousel-control slide-control" href="#carousel-testimonials1" data-slide="next">
-                            <span class="glyphicon slide-content"></span>
-                        </a>
+                <div class="col-md-12 testimonial-bottom">
+                    <h3>Testimonials</h3>
+                </div>
+                <div class="slide-button-testimonials">
+                    <div class="container slide-button-container">
+                        <div class="slide-control-height">
+                            <a class="carousel-control slide-control" href="#carousel-testimonials1" data-slide="next">
+                                <span class="glyphicon slide-content"></span>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
             </div>
             <!-- Карусель -->
             <div id="carousel-testimonials1" class="carousel slide" data-interval="0" data-ride="carousel">
@@ -900,7 +905,8 @@
                         </div>
                         <div class="testimonials-title">
                             <h4>William Edwards School</h4></div>
-                        <div class="testimonials-subj">“Brendan gave an inspirational assembly to students in Years 7 and 8
+                        <div class="testimonials-subj">“Brendan gave an inspirational assembly to students in Years 7
+                            and 8
                             during
                             which he gave invaluable advice about how to set goals,
                             dream big and work hard, even in the face of adversity.
@@ -924,7 +930,8 @@
                         </div>
                         <div class="testimonials-title">
                             <h4>Woodhey High School</h4></div>
-                        <div class="testimonials-subj">"Brendan delivered a personal engaging motivational and humorous speech to our
+                        <div class="testimonials-subj">"Brendan delivered a personal engaging motivational and humorous
+                            speech to our
                             GCSE pupils. He reinforced the school values of resilience and pushing yourself
                             to be the best version of you. The pupils enjoyed the activities that were delivered
                             and the serious element of his message was well received."
