wording and ico

--- a/platform/index.html
+++ b/platform/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squad In Touch</title>
     <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-main" data-offset="72">
@@ -574,7 +575,7 @@
                     </h4>
                     <p>"We are delighted with Squad In Touch at Melbourne Junior School.  They could not have been more
                         helpful in explaining how it works and accommodating our specific school's requirements in the
-                        set-up process <span><a href="#melbourne-school" data-toggle="modal"> Read more..</a></span> <br>
+                        set-up process. <span><a href="#melbourne-school" data-toggle="modal"> Read more..</a></span>" <br>
                         <br>
                         — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
                     </p>
@@ -636,7 +637,7 @@
                             <h4>Melbourne Junior School</h4></div>
                         <div class="testimonials-subj">"We are delighted with Squad In Touch at Melbourne Junior School.  They could not have been more
                             helpful in explaining how it works and accommodating our specific school's requirements in the
-                            set-up process <span><a href="#melbourne-school" data-toggle="modal"> Read more..</a></span> <br>
+                            set-up process. <span><a href="#melbourne-school" data-toggle="modal"> Read more..</a></span>" <br>
                             <br>
                             — Jim Jenkinson, PE & School Sport Coordinator, Melbourne Junior School
                         </div>
