--- a/sport/index.html
+++ b/sport/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squad In Touch</title>
     <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
+    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-main" data-offset="72">
