--- a/platform/index.html
+++ b/platform/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Squad In Touch</title>
     <link rel="stylesheet" href="../dist/style.css" type="text/css"/>
-    <link rel="shortcut icon" type="image/ico" href="/favicon.ico"/>
+    <link rel="shortcut icon" type="image/ico" href="../favicon.ico"/>
 </head>
 
 <body data-spy="scroll" data-target="#navbar-main" data-offset="72">
@@ -50,7 +50,7 @@
                                     <ul class="nav navbar-nav main_nav">
 
                                         <li class="main-menu-item">
-                                            <a href="#" data-toggle="dropdown">
+                                            <a class="menu-open" href="#" data-toggle="dropdown">
                                                 <b class="caret caret_custom"></b>
                                                 How it helps
                                             </a>
@@ -69,7 +69,7 @@
                                         </li>
 
                                         <li class="main-menu-item">
-                                            <a href="#" data-toggle="dropdown">
+                                            <a class="menu-open" href="#" data-toggle="dropdown">
                                                 <b class="caret caret_custom"></b>
                                                 How it works
                                             </a>
